removed scroll paralax on mobile, attempting to fix toolbar popin issues on mobile

--- a/main.css
+++ b/main.css
@@ -452,6 +452,10 @@ figcaption {
 }
 
 @media (max-width: 39.999rem) {
+    #dot-canvas {
+        height: 100lvh;
+    }
+
     :root {
         --page-gutter: 1rem;
         --section-gap: clamp(2rem, 7svh, 3.5rem);
